--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 
 <h1>Hello Angular !!</h1>
+<app-my-cmp></app-my-cmp>
+<app-my-first-comp></app-my-first-comp>
+<app-my-second-comp></app-my-second-comp>
+<app-my-third-comp></app-my-third-comp>
