Add a New Version with a (click) Event Management

--- a/src/app/my-first-comp/my-first-comp.component.html
+++ b/src/app/my-first-comp/my-first-comp.component.html
@@ -1,1 +1,2 @@
-<h1 style="margin-left: 25px">My-First-Comp Works!</h1>
+<h1 style="margin-left: 25px" (click)="myFirstCompEvent($event)">{{myFirstComp}} Works !</h1>
+
