--- a/src/app/my-second-comp/my-second-comp.component.html
+++ b/src/app/my-second-comp/my-second-comp.component.html
@@ -1,1 +1,1 @@
-<h1 style="margin-left: 25px">My-Second-Comp Works!</h1>
+<h1 style="margin-left: 25px" (click)="mySecondCompEvent($event)">{{mySecondComp}} Works !</h1>
