--- a/src/app/my-third-comp/my-third-comp.component.html
+++ b/src/app/my-third-comp/my-third-comp.component.html
@@ -1,1 +1,1 @@
-<h1 style="margin-left: 25px">My-Third-Comp Works!</h1>
+<h1 style="margin-left: 25px" (click)="myThirdCompEvent($event)">{{myThirdComp}} Works!</h1>
